all endpoints work