@@ -26,12 +26,14 @@ repositories {
 apply plugin: "kotlin-kapt"
 
 dependencies {
-    compile (
+    implementation (
+            "com.squareup.okhttp3:okhttp:3.2.0",
             'org.jetbrains.kotlin:kotlin-stdlib:1.4.32',
             'com.amazonaws:aws-lambda-java-core:1.2.1',
-            'com.amazonaws:aws-lambda-java-log4j2:1.5.1',
+            'com.amazonaws:aws-lambda-java-events:3.9.0',
             'org.apache.logging.log4j:log4j-api:2.17.1',
             'org.apache.logging.log4j:log4j-core:2.17.1',
+            'org.apache.logging.log4j:log4j-slf4j18-impl:2.17.1',
             'com.fasterxml.jackson.core:jackson-core:2.11.0',
             'com.fasterxml.jackson.core:jackson-databind:2.11.0',
             'com.fasterxml.jackson.core:jackson-annotations:2.11.0',
@@ -49,7 +51,13 @@ dependencies {
             'com.github.tomakehurst:wiremock-jre8:2.28.1',
             'org.jetbrains.kotlin:kotlin-test:1.4.32',
     )
+    runtimeOnly 'com.amazonaws:aws-lambda-java-log4j2:1.5.1'
     kapt('org.mapstruct:mapstruct-processor:1.4.2.Final')
+
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter:5.7.0',
+            'org.assertj:assertj-core:3.12.2'
+    )
 }
 
 compileKotlin {
@@ -59,10 +67,8 @@ compileKotlin {
     }
 }
 
-compileTestKotlin.onlyIf { false }
-
 tasks.register("buildLayer", Copy) {
-    from configurations.compile
+    from configurations.runtimeClasspath
     into "$buildDir/layer/java/lib"
 }
 
@@ -76,3 +82,8 @@ task deploy(type: Exec, dependsOn: 'build') {
 }
 
 build.dependsOn buildLayer
+
+test {
+    useJUnitPlatform()
+    jvmArgs '--illegal-access=warn'
+}
